--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "dist/index.js",
   "scripts": {
     "build": "esbuild --bundle ./src/index.js --outfile=./dist/index.js --format=esm --sourcemap --minify",
+    "dev": "esbuild --bundle ./src/index.js --outfile=./dist/index.js --format=esm --watch",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
