--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bramus/pagination-sequence",
   "version": "1.0.2",
-  "description": "Pagination Sequence Generator",
+  "description": "Generate a sequence of numbers for use in a Pagination Component, the clever way.",
   "type": "module",
   "source": "src/index.js",
   "module": "dist/index.js",
