Fix detected module kind and package.json exports

--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.2.0",
   "description": "Generate a sequence of numbers for use in a Pagination Component, the clever way.",
   "type": "module",
-  "main": "dist/index.cjs.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
-  "export": {
-    ".": "./dist/index.esm.js",
-    "import": "./dist/index.esm.js",
-    "require": "./dist/index.cjs.js"
+  "exports": {
+    ".": {
+        "require": "./dist/index.cjs"
+        "default": "./dist/index.esm.js"
+    }
   },
   "scripts": {
     "build-esm": "esbuild --bundle ./src/index.js --outfile=./dist/index.esm.js --format=esm --sourcemap --minify",
-    "build-cjs": "esbuild --bundle ./src/index.js --outfile=./dist/index.cjs.js --format=cjs --sourcemap --minify",
+    "build-cjs": "esbuild --bundle ./src/index.js --outfile=./dist/index.cjs --format=cjs --sourcemap --minify",
     "build": "npm run build-esm && npm run build-cjs",
     "prepublish": "npm run build",
     "pretest": "npm run build",
