--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "dist/index.esm.js",
   "exports": {
     ".": {
-        "require": "./dist/index.cjs"
+        "require": "./dist/index.cjs",
         "default": "./dist/index.esm.js"
     }
   },
